# thequotebook

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  thequotebook.example.toml
.github/workflows/: package.yml
app/controllers/: application.rb  comments_controller.rb  contexts_controller.rb  home_controller.rb  quotes_controller.rb  sessions_controller.rb  users_controller.rb  usexes_controller.rb
app/helpers/: application_helper.rb  comments_helper.rb  quotes_helper.rb  users_helper.rb  usexes_helper.rb
app/models/: comment.rb  context.rb  quote.rb  user.rb  user_mailer.rb  usex.rb
app/views/comments/: _form.html.erb  _list.html.erb  _list_all.html.erb  _list_sidebar.html.erb  edit.html.erb  index.atom.builder  index.html.erb  new.html.erb  show.html.erb
app/views/contexts/: _form.html.erb  edit.html.erb  index.html.erb  new.html.erb  quotes.html.erb  show.html.erb
app/views/home/: comments.html.erb  index.html.erb
app/views/layouts/: application.html.erb  comments.html.erb  contexts.html.erb  home.html.erb  no_sidebars.html.erb  quotes.html.erb  sessions.html.erb  users.html.erb
app/views/quotes/: _form.html.erb  edit.html.erb  index.atom.builder  index.html.erb  new.html.erb  show.html.erb
app/views/sessions/: new.html.erb
app/views/shared/: _quote.html.erb  _user_bar.html.erb
app/views/user_mailer/: comment_email.text.html.erb  comment_email.text.plain.erb  quote_email.text.html.erb  quote_email.text.plain.erb
app/views/users/: _form.html.erb  _user_bar.html.erb  create_matches.html.erb  edit.html.erb  index.html.erb  new.html.erb  new_partial.html.erb  quotes.html.erb  relevant_comments.html.erb  relevant_quotes.html.erb  show.html.erb
app/views/usexes/: _usex_bar.html.erb  new.html.erb
config/: database.yml  environment.rb  routes.rb
config/environments/: production.rb
config/initializers/: site_keys.rb
db/: schema.rb
db/migrate/: 20081227045445_create_contexts.rb  20081227105616_create_users.rb  20081227111643_create_quotes.rb  20081230031736_create_usexes.rb  20081230052010_add_token_etc_to_user.rb  20090110011107_add_open_id_tables.rb  20090110024256_add_email_address_to_users.rb  20090120054754_create_contexts_users.rb  20090207004827_create_comments.rb  20090426055441_set_default_time_zone_for_users.rb  20090522223936_add_email_notifications_to_users.rb  20091206031423_add_hidden_to_quote.rb
debian-scripts/: thequotebook.service
lib/: authenticated_system.rb  authenticated_test_helper.rb  bb-ruby.rb  pagination_renderer.rb
public/javascripts/: open-selector.js
public/stylesheets/: ie.css  iphone.css  main.css  narrow.css  scaffold.css  style.css
src/: config.rs  contexts.rs  errors.rs  home.rs  index.rs  main.rs  markdown.rs  pagination.rs  responses.rs  session.rs  types.rs  users.rs
src/atom/: comments.rs  mod.rs  quotes.rs
src/controllers/: comments.rs  contexts.rs  home.rs  mod.rs  quotes.rs  sessions.rs  users.rs
src/filters/: comment.rs  mod.rs  quote.rs  time.rs  user.rs
src/model/: comment.rs  context.rs  mod.rs  quote.rs  user.rs
templates/: home.html  index.html
templates/comments/: index.html  list.html  list_all.html  list_sidebar.html  show.html
templates/contexts/: edit.html  form.html  index.html  new.html  quotes.html  show.html
templates/home/: comments.html  index.html
templates/layouts/: application.html  home.html  no_sidebars.html  sessions.html
templates/quotes/: edit.html  form.html  index.html  new.html  show.html
templates/sessions/: new.html
templates/shared/: chatty_comment.html  chatty_quote.html  pages.html  quote.html  user_bar.html
templates/users/: edit.html  form.html  index.html  quotes.html  relevant_comments.html  relevant_quotes.html  show.html
test/fixtures/: comments.yml  quotes.yml  users.yml  usexes.yml
test/functional/: sessions_controller_test.rb  usexes_controller_test.rb
test/unit/: usex_test.rb
