[package]
name = "thequotebook"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Walbran <qwandor@google.com>"]
license = "MIT OR Apache-2.0"
description = "A website for collecting funny quotes from groups of friends."
repository = "https://gitlab.com/qwandor/thequotebook/"
keywords = ["quotes", "website"]
categories = ["web-programming"]

[dependencies]
askama = "0.14.0"
atom_syndication = "0.12.7"
axum = "0.8.4"
chrono = "0.4.41"
color-backtrace = "0.7.0"
eyre = "0.6.5"
jsonwebtoken = "9.3.1"
jsonwebtoken-google = "0.1.2"
log = "0.4.27"
md5 = "0.8.0"
paginate = "1.1.0"
pretty_env_logger = "0.5.0"
pulldown-cmark = "0.13.0"
pulldown-cmark-escape = "0.11.0"
regex = "1.11.1"
serde = "1.0.219"
sqlx = { version = "0.6.3", features = [
	"chrono",
	"postgres",
	"runtime-tokio-rustls",
] }
stable-eyre = "0.2.2"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["fs"] }

[package.metadata.deb]
section = "web"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/thequotebook.toml"]
assets = [
	["target/release/thequotebook", "usr/bin/", "755"],
	["public/images/*", "/usr/share/thequotebook/images/", "644"],
	["public/stylesheets/*", "/usr/share/thequotebook/stylesheets/", "644"],
	["thequotebook.example.toml", "etc/thequotebook.toml", "640"],
	["README.md", "usr/share/doc/thequotebook/", "644"],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
